--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,112 @@ body {
   /* margin: 0 auto;  */
 }
 
+
+
+@media all and (max-width: 980px) {
+
+  header {
+   width: 100%;
+   }
+   body{
+     width: 100%;
+   }
+
+   .abc {
+    /* padding: 0; */
+    margin: 0;
+    width: 85%;
+    /* height: 30%; */
+  } 
+  .button {
+    border-radius: 4px;
+    background-color: rebeccapurple;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+     /* padding: 20px; */
+    width: 200px; 
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+   .op {
+    margin: 0;
+    width: 85%;
+   }
+}
+
+ 
+.body2
+{
+  /* flex-direction: column;
+  justify-content: space-between;
+  background-color: #264653;
+  display: flex;
+  align-items: center;
+  width: 350px;
+  height:250px;
+  margin: 0 auto; */
+  
+  background-color:rgb(20, 192, 141); 
+  /* #264653; */
+  width: 350px;
+  height:450px;
+  margin: 0 auto;  
+  
+}
+
+.body-flex
+{
+  background-color:rgb(20, 192, 141); 
+  /* #264653; */
+  width: 350px;
+  height:450px;
+  margin: 0 auto;  
+  
+}
+
+.flex-reg
+{
+  display: flex;
+
+  /* Then we define the flow direction 
+     and if we allow the items to wrap 
+   * Remember this is the same as:
+   * flex-direction: row;
+   * flex-wrap: wrap;
+   */
+   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  /* flex-flow: row wrap;
+
+  /* Then we define how is distributed the remaining space */
+  /* justify-content: space-around; */ 
+}
+
+
+
+
+
+
+
+
 .abc {
   background-color: white;
   color: purple;
-  padding: 12px 20px;
-  margin: 60px 16px 80px 50px;
-  width: 550px;
-  height: 250px;
+  /* padding: 12px 20px; */
+  /* margin: 60px 16px 80px 50px;  */
+  margin-top: 10px;
+  width: 250px;
+  height: 150px;
   border-color: white;
   box-sizing: border-box;
   font-size: 16px;
 }
-
 .header {
   background-image: url('https://images.unsplash.com/photo-1484584343816-b22e89904ab2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
   background-size: cover;
@@ -47,6 +141,33 @@ body {
   text-align: center;
 }
 
+/* 
+@media all and (max-width: 980px) {
+ 
+  body{   
+   width: 100%;
+   }
+ 
+   .abc{
+     width:10%;
+     height: 10%;
+     padding: 10px 10px;
+     margin: 10px 10px 10px 10px;
+   }
+   
+   .button{
+    width:10%;
+    height: 10%;    
+  }
+
+  .op{
+    width:10%;
+     height: 10%;
+     padding: 10px 10px;
+     margin: 10px 10px 10px 10px;
+  }
+ } */
+
 .footer {
   background-image: url('https://images.unsplash.com/photo-1484584343816-b22e89904ab2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
   background-size: cover;
@@ -55,7 +176,7 @@ body {
   height: 100px;
 }
 
-.abc::after {
+/* .abc::after {
   background-color: grey;
   content: '';
   display: block;
@@ -65,33 +186,33 @@ body {
   right: 10px;
   bottom: 10px;
   z-index: -1;
-}
-
+} */
 .op {
   background-color: white;
   color:purple;
-  padding: 12px 20px;
-  margin: 60px 16px 80px 20px;
-  width: 550px;
-  height: 250px;
+  /* padding: 12px 20px;
+  margin: 60px 16px 80px 20px; */
+  margin-bottom: 10px;
+  width: 250px;
+  height: 150px;
   border-color: white;
   box-sizing: border-box;
   font-size: 16px;
 }
 
 .button {
-  /* it starts here       */
-  background-color: #aa1d2f;
-  color: wheat;
-  padding: 6px 6px;
-  text-decoration: solid;     
-  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
   text-align: center;
-  border: 1px solid black;
-  font-size: 20px;
-  margin-left: 30px;
-  margin-top: 14px;
-  margin-bottom: 18px;
+  font-size: 28px;
+  /* padding: 20px; */
+  
+  width: 250px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
 
 a {
